syntax = "proto3";
option java_multiple_files = true;
package com.ampnet.identityservice.proto;

message GetUsersRequest {
  repeated string addresses = 1;
}

message UserResponse {
  string address = 1;
  string email = 2;
  uint64 createdAt = 3;
  string language = 4;
  string first_name = 5;
  string last_name = 6;
  string dateOfBirth = 7;
  string documentNumber = 8;
  string personalNumber = 9;
}

message UsersResponse {
  repeated UserResponse users = 1;
}

service IdentityService {
  rpc GetUsers (GetUsersRequest) returns (UsersResponse);
}
